A little more tidying

--- a/notebooks/check_tfrecords.ipynb
+++ b/notebooks/check_tfrecords.ipynb
@@ -9,7 +9,6 @@
     "import IPython.display as ipd\n",
     "import os\n",
     "import librosa\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = ''\n",
     "import glob\n",
     "import time\n",
     "import logging\n",
@@ -20,11 +19,8 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from scipy import signal\n",
-    "# from utils.Params import Params\n",
     "from os.path import normpath, basename\n",
-    "# from utils.PreProcess import linear2mu,  mu2linear\n",
     "import matplotlib.pyplot as plt\n",
-    "# from utils.LoadData import  _parse_function, count_examples\n",
     "import random\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = ''\n"
    ]
@@ -225,8 +221,8 @@
     "    source_file = tf.decode_raw(parsed_features['source_file'], tf.uint8)\n",
     "    return (audio_inputs, audio_quant), label\n",
     "\n",
-    "\n",
-    "data_binaries_log = '/volumes/exSSD/RED_ARCHIVE/data_binaries/train/babycry/bus/'\n",
+    "repo_dir = \"\"\n",
+    "data_binaries_log = os.path.join(repo_dir,'data_binaries/train/babycry/bus/')\n",
     "filenames_neg = ['{}babycry_bus_neg.tfrecord'.format(data_binaries_log)]\n",
     "filenames_pos = ['{}babycry_bus_pos.tfrecord'.format(data_binaries_log)]\n",
     "\n",
@@ -317,7 +313,6 @@
     "filenames_pl = tf.placeholder(tf.string, shape=[None])\n",
     "dataset = tf.data.TFRecordDataset(filenames_pl)\n",
     "dataset = dataset.map(_parse_function)\n",
-    "# dataset = dataset.repeat()\n",
     "dataset = dataset.batch(1)\n",
     "iterator = dataset.make_initializable_iterator()\n",
     "next_batch = iterator.get_next()\n",
@@ -1027,7 +1022,6 @@
     "filenames_pl = tf.placeholder(tf.string, shape=[None])\n",
     "dataset = tf.data.TFRecordDataset(filenames_pl)\n",
     "dataset = dataset.map(_wavenet_test_parse_function)\n",
-    "# dataset = dataset.repeat()\n",
     "dataset = dataset.batch(1)\n",
     "iterator = dataset.make_initializable_iterator()\n",
     "next_batch = iterator.get_next()\n",
@@ -1139,7 +1133,6 @@
     "filenames_pl = tf.placeholder(tf.string, shape=[None])\n",
     "dataset = tf.data.TFRecordDataset(filenames_pl)\n",
     "dataset = dataset.map(_wavenetcond_parse_function)\n",
-    "# dataset = dataset.repeat()\n",
     "dataset = dataset.batch(1)\n",
     "iterator = dataset.make_initializable_iterator()\n",
     "next_batch = iterator.get_next()\n",
@@ -1834,7 +1827,6 @@
     "num_examples = count_examples(filenames_pos)\n",
     "print(\"Number of batches per epoch:\", num_examples/batch_size)\n",
     "dataset = tf.data.TFRecordDataset(filenames_pos)\n",
-    "# dataset = dataset.shuffle(num_examples)\n",
     "dataset = dataset.map(_cae_parse_function)\n",
     "dataset = dataset.batch(batch_size)\n",
     "iterator = dataset.make_initializable_iterator()\n",
@@ -1919,7 +1911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
