Made variable names clearer to avoid confusion

--- a/FinalResults-updated-with-PRAUC.ipynb
+++ b/FinalResults-updated-with-PRAUC.ipynb
@@ -96,8 +96,8 @@
     "    wn_mse_col = wn_SE.mean(axis=0)\n",
     "    wn_mse = wn_SE.mean(axis=1)\n",
     "    wn_fpr, wn_tpr, wn_thresholds = metrics.roc_curve(wn_labels,wn_mse)\n",
-    "    wn_auc_mse = metrics.auc(wn_fpr, wn_tpr)\n",
-    "    print('{:.2f} {} ({})'.format(wn_auc_mse, scene, wn_auc_mse))"
+    "    wn_roc_auc_mse = metrics.auc(wn_fpr, wn_tpr)\n",
+    "    print('{:.2f} {} ({})'.format(wn_roc_auc_mse, scene, wn_roc_auc_mse))"
    ]
   },
   {
@@ -135,13 +135,13 @@
     "    cae_SE = (cae_preds - cae_targets) ** 2\n",
     "    cae_mse = cae_SE.mean(axis=1)\n",
     "    cae_fpr, cae_tpr, cae_thresholds = metrics.roc_curve(cae_labels,cae_mse)\n",
-    "    cae_auc_mse = metrics.auc(cae_fpr, cae_tpr)\n",
-    "    print('{:.2f} {} ({})'.format(cae_auc_mse, scene, cae_auc_mse))"
+    "    cae_roc_auc_mse = metrics.auc(cae_fpr, cae_tpr)\n",
+    "    print('{:.2f} {} ({})'.format(cae_roc_auc_mse, scene, cae_roc_auc_mse))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,13 +175,13 @@
     "    wn_mse_col = wn_SE.mean(axis=0)\n",
     "    wn_mse = wn_SE.mean(axis=1)\n",
     "    wn_precision, wn_recall, _ = metrics.precision_recall_curve(wn_labels,wn_mse)\n",
-    "    wn_auc_mse = metrics.auc(wn_recall, wn_precision)\n",
-    "    print('{:.2f} {} ({})'.format(wn_auc_mse, scene, wn_auc_mse))"
+    "    wn_pr_auc_mse = metrics.auc(wn_recall, wn_precision)\n",
+    "    print('{:.2f} {} ({})'.format(wn_pr_auc_mse, scene, wn_pr_auc_mse))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +214,8 @@
     "    cae_SE = (cae_preds - cae_targets) ** 2\n",
     "    cae_mse = cae_SE.mean(axis=1)\n",
     "    cae_precision, cae_recall, _ = metrics.precision_recall_curve(cae_labels,cae_mse)\n",
-    "    cae_auc_mse = metrics.auc(cae_recall, cae_precision)\n",
-    "    print('{:.2f} {} ({})'.format(cae_auc_mse, scene, cae_auc_mse))"
+    "    cae_pr_auc_mse = metrics.auc(cae_recall, cae_precision)\n",
+    "    print('{:.2f} {} ({})'.format(cae_pr_auc_mse, scene, cae_pr_auc_mse))"
    ]
   }
  ],
