--- a/FinalResults.ipynb
+++ b/FinalResults.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,32 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WaveNet Results:\n",
-      "0.72 beach (0.7249212353262138)\n",
-      "0.83 bus (0.8287052631578948)\n",
-      "0.76 cafe_restaurant (0.7561466229663864)\n",
-      "0.82 car (0.8217299387792277)\n",
-      "0.82 city_center (0.8236671102689241)\n",
-      "0.72 forest_path (0.7175636189877798)\n",
-      "0.77 grocery_store (0.7716451089573134)\n",
-      "0.69 home (0.6905454425988069)\n",
-      "0.67 library (0.6662959154254813)\n",
-      "0.79 metro_station (0.790010652017652)\n",
-      "0.78 office (0.7841212117390216)\n",
-      "0.80 park (0.8038107366043231)\n",
-      "0.78 residential_area (0.777699619439862)\n",
-      "0.84 train (0.8382276824461414)\n",
-      "0.87 tram (0.8695021100364341)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('WaveNet Results:')\n",
     "for scene in scenes:\n",
@@ -102,32 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CAE Results:\n",
-      "0.69 beach (0.6942539539938926)\n",
-      "0.79 bus (0.7929294414196411)\n",
-      "0.69 cafe_restaurant (0.6925009523016172)\n",
-      "0.79 car (0.7896839815949859)\n",
-      "0.75 city_center (0.751457434700052)\n",
-      "0.65 forest_path (0.6545196343519264)\n",
-      "0.71 grocery_store (0.7050269513862195)\n",
-      "0.69 home (0.6898417472535412)\n",
-      "0.59 library (0.586443300797961)\n",
-      "0.74 metro_station (0.7429961169649938)\n",
-      "0.78 office (0.7796394913934745)\n",
-      "0.70 park (0.6985115740822218)\n",
-      "0.73 residential_area (0.7343311785037272)\n",
-      "0.82 train (0.8230979782799646)\n",
-      "0.80 tram (0.8045354121379408)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('CAE Results:')\n",
     "for scene in scenes:\n",
@@ -138,9 +92,19 @@
     "    cae_auc_mse = metrics.auc(cae_fpr, cae_tpr)\n",
     "    print('{:.2f} {} ({})'.format(cae_auc_mse, scene, cae_auc_mse))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -156,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
